--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -1,6 +1,9 @@
 name: Build images
 on:
   workflow_dispatch:
+  schedule:
+    # At 00:00 on Saturday.
+    - cron: "0 0 * * 6"
   push:
     branches: [ "main", "master" ]
 
