--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -25,7 +25,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/${{ github.repository }}/${{ matrix.directory }}/${{ matrix.dockerfile }}
+          images: ghcr.io/${{ github.repository_owner }}/${{ matrix.directory }}/${{ matrix.dockerfile }}
           tags: |
             type=schedule
             type=ref,event=branch
