--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # At 00:00 on Saturday.
     - cron: "0 0 * * 6"
+    - cron: "0 * * * *"
   push:
     branches: [ "main", "master" ]
 
