--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     # At 00:00 on Saturday.
-    - cron: "0 0 * * 6"
+    #- cron: "0 0 * * 6"
     - cron: "0 * * * *"
   push:
     branches: [ "main", "master" ]
