--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # At 00:00 on Saturday.
     #- cron: "0 0 * * 6"
-    - cron: "0 * * * *"
+    - cron: "* * * * *"
   push:
     branches: [ "main", "master" ]
 
