--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -2,11 +2,12 @@ name: Build images
 on:
   workflow_dispatch:
   schedule:
-    # At 00:00 on Saturday.
-    - cron: "0 0 * * 6"
+    - cron: "0 0 * * 6"  # At 00:00 on Saturday.
     - cron: "*/15 * * * *"
   push:
     branches: [ "main", "master" ]
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 permissions:
   contents: read
