--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -5,7 +5,7 @@ on:
     - cron: "0 0 * * 6"  # At 00:00 on Saturday.
     - cron: "*/15 * * * *"
   push:
-    branches: [ "main", "master" ]
+    branches: [ main, master ]
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 
