--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 0 * * 6"  # At 00:00 on Saturday.
-    - cron: "*/15 * * * *"
+    #- cron: "*/15 * * * *"
   create:
     tags: "**"
   push:
