#patch auto tags

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -1,13 +1,12 @@
 name: Build images
 on:
-#  workflow_dispatch:
-#  schedule:
-#    - cron: "0 0 * * 6"  # At 00:00 on Saturday.
-    #- cron: "*/15 * * * *"
-  create
-#  push:
-#    branches: [ main, master ]
-#    tags: "**"
+  workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * 6"  # At 00:00 on Saturday.
+    - cron: "*/15 * * * *"
+  push:
+    branches: [ main, master ]
+    tags: "**"
 #  workflow_run:
 #    workflows: [ bump-version ]
 #    types:
