--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -7,10 +7,11 @@ on:
   push:
     branches: [ main, master ]
     tags: "**"
-#  workflow_run:
-#    workflows: [ bump-version ]
-#    types:
-#      - completed
+  # https://stackoverflow.com/questions/60418323/triggering-a-new-workflow-from-another-workflow
+  workflow_run:
+    workflows: [ "Bump version" ]
+    types:
+      - completed
 
 permissions:
   contents: read
