--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -5,8 +5,8 @@ on:
     - cron: "0 0 * * 6"  # At 00:00 on Saturday.
     - cron: "*/15 * * * *"
   push:
-    branches: [ main, master ]
-    tags: "**"
+    #branches: [ main, master ]
+    #tags: "**"
   # https://stackoverflow.com/questions/60418323/triggering-a-new-workflow-from-another-workflow
   workflow_run:
     workflows: [ "Bump version" ]
