--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -1,13 +1,13 @@
 name: Build images
 on:
-  create
+#  create
 #  workflow_dispatch:
 #  schedule:
 #    - cron: "0 0 * * 6"  # At 00:00 on Saturday.
     #- cron: "*/15 * * * *"
-#  push:
+  push:
     #branches: [ main, master ]
-    #tags: "**"
+    tags: "v*"
   # https://stackoverflow.com/questions/60418323/triggering-a-new-workflow-from-another-workflow
 #  workflow_run:
 #    workflows: [ "Bump version" ]
