#patch auto tags

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -18,7 +18,8 @@ jobs:
         with:
           fetch-depth: '0'
       -
-        uses: anothrNick/github-tag-action@1
+        #uses: anothrNick/github-tag-action@1
+        uses: phish108/autotag-action@v1.1.55
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_BRANCHES: main,master
