--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -7,7 +7,7 @@ on:
     #- cron: "*/15 * * * *"
   push:
     #branches: [ main, master ]
-    #tags: "v*"
+    tags: "v*"
   # https://stackoverflow.com/questions/60418323/triggering-a-new-workflow-from-another-workflow
 #  workflow_run:
 #    workflows: [ "Bump version" ]
@@ -43,6 +43,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=sha
+            type=sha,format=long
       -
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
