--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -43,6 +43,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          persist-credentials: false
       -
         id: meta
         uses: docker/metadata-action@v4
