--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -15,8 +15,6 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v3
-        with:
-          persist-credentials: false
       -
         run: |
           git config --local user.email "action@github.com"
@@ -46,8 +44,14 @@ jobs:
 #        with:
 #          github_token: ${{ secrets.GITHUB_TOKEN }}
       -
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
+      -
         uses: phish108/autotag-action@v1.1.55
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ steps.app-token.outputs.token }}
           release-branch: main,master
           with-v: true
