--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -34,7 +34,7 @@ jobs:
       -
         run: |
           echo "${{ steps.tagger.outputs.new-tag }}" > VERSION.txt
-          git commit -a . -m "version bump to ${{ steps.tagger.outputs.new-tag }}"
+          git commit . -am "version bump to ${{ steps.tagger.outputs.new-tag }}"
 #      -
 #        name: Push changes
 #        uses: ad-m/github-push-action@master
