--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -18,10 +18,6 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-
-#      - uses: actions/checkout@v3
-#        with:
-#          fetch-depth: '0'
       -
         #uses: anothrNick/github-tag-action@1
         uses: phish108/autotag-action@v1.1.55
@@ -35,12 +31,12 @@ jobs:
         run: |
           echo "${{ steps.tagger.outputs.new-tag }}" > VERSION.txt
           git add .
-          git commit -m "version bump to ${{ steps.tagger.outputs.new-tag }}"
-#      -
-#        name: Push changes
-#        uses: ad-m/github-push-action@master
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
+          git commit -am "version bump to ${{ steps.tagger.outputs.new-tag }}"
+      #      -
+      #        name: Push changes
+      #        uses: ad-m/github-push-action@master
+      #        with:
+      #          github_token: ${{ secrets.GITHUB_TOKEN }}
       -
         uses: actions/create-github-app-token@v1
         id: app-token
