--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -54,7 +54,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=sha
-            type=sha,format=long
+          #  type=sha,format=long
       -
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
