--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -1,10 +1,10 @@
 name: Build images
 on:
 #  create
-#  workflow_dispatch:
-#  schedule:
-#    - cron: "0 0 * * 6"  # At 00:00 on Saturday.
-    #- cron: "*/15 * * * *"
+  workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * 6"  # At 00:00 on Saturday.
+    - cron: "*/15 * * * *"
 #  push:
 #    branches: [ main, master ]
 #    tags: "*"
