--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -39,7 +39,7 @@ jobs:
           - directory: jupyter
             dockerfile: ubuntu-pip
           - directory: jupyter
-            dockerfile: ubuntu-cling
+            dockerfile: xeus-cling
 
     runs-on: ubuntu-latest
 
