--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -40,6 +40,7 @@ jobs:
             dockerfile: ubuntu-pip
           - directory: jupyter
             dockerfile: xeus-cling
+          - directory: asciidoc_jekyll
 
     runs-on: ubuntu-latest
 
@@ -49,7 +50,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/${{ github.repository_owner }}/${{ matrix.directory }}/${{ matrix.dockerfile }}
+          images: ghcr.io/${{ github.repository_owner }}/${{ matrix.directory }}${{ matrix.dockerfile && format('/{0}', matrix.dockerfile) }}
           tags: |
             type=schedule
             type=ref,event=branch
@@ -74,7 +75,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ${{ matrix.directory }}
-          file: ${{ matrix.directory }}/${{ matrix.dockerfile }}.Dockerfile
+          file: ${{ matrix.directory }}/${{ matrix.dockerfile && format('{0}.', matrix.dockerfile) }}Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
