build windows image

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -94,8 +94,8 @@ jobs:
           buildArgs: BASE_IMAGE=${{ matrix.base }}
           # enableBuildKit: ${{ runner.os != 'Windows' }}
           pushImage: false
-          #registry: ghcr.io
+          registry: ghcr.io
           #addLatest: true
           #addTimestamp: true
-          #username: ${{ github.repository_owner }}
-          #password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
