--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -88,7 +88,7 @@ jobs:
     strategy:
       fail-fast: false
 
-    runs-on: windows-latest
+    runs-on: windows-2019
 
     steps:
       - uses: actions/checkout@v3
