update cmake to 3.28

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -88,16 +88,16 @@ jobs:
     strategy:
       matrix:
         include:
-          -
-            directory: windows
-            dockerfile: chocolatey
-            base: chocolatey/choco:latest-windows
-            runner: windows-2019
-          -
-            directory: windows
-            dockerfile: chocolatey
-            base: chocolatey/choco:latest-windows
-            runner: windows-2022
+#          -
+#            directory: windows
+#            dockerfile: chocolatey
+#            base: chocolatey/choco:latest-windows
+#            runner: windows-2019
+#          -
+#            directory: windows
+#            dockerfile: chocolatey
+#            base: chocolatey/choco:latest-windows
+#            runner: windows-2022
           -
             directory: windows
             dockerfile: msys2
