ubuntu base image

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -38,6 +38,7 @@ jobs:
     strategy:
       matrix:
         include:
+          - directory: ubuntu
           - directory: jupyter
             dockerfile: ubuntu-pybind
           - directory: jupyter
