--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -56,6 +56,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: false
       -
         id: meta
         uses: docker/metadata-action@v5
