--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -52,7 +52,7 @@ jobs:
           #- directory: cmake3-conan1-gcc
       fail-fast: false
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
 
     steps:
       - uses: actions/checkout@v4
