arch linux dockerfile and build

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -45,6 +45,8 @@ jobs:
           - directory: jupyter
             dockerfile: ubuntu-pybind
           - directory: jupyter
+            dockerfile: arch
+          - directory: jupyter
             dockerfile: ubuntu-pip
           - directory: jupyter
             dockerfile: xeus-cling
