--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -47,6 +47,8 @@ jobs:
           - directory: jupyter
             dockerfile: arch
           - directory: jupyter
+            dockerfile: fedora
+          - directory: jupyter
             dockerfile: ubuntu-pip
           - directory: jupyter
             dockerfile: xeus-cling
