build asciidoc_jekyll only for x86

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -53,10 +53,11 @@ jobs:
           - directory: jupyter
             dockerfile: xeus-cling
           - directory: asciidoc_jekyll
+            cpu: x86_64
           #- directory: cmake3-conan1-gcc
       fail-fast: false
 
-    runs-on: ubuntu-24.04-arm
+    runs-on: ubuntu-24.04${{ !matrix.cpu && '-arm' }}
 
     steps:
       - uses: actions/checkout@v4
