--- a/asciidoc_jekyll/Gemfile
+++ b/asciidoc_jekyll/Gemfile
@@ -14,7 +14,8 @@ source "https://rubygems.org"
 gem "jekyll"
 
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
-gem "minima", github: "jekyll/minima"
+# gem "minima", github: "jekyll/minima"
+gem "minimal-mistakes-jekyll"
 
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
@@ -22,24 +23,25 @@ gem "minima", github: "jekyll/minima"
 
 # If you have any plugins, put them here!
 gem 'jekyll-sitemap'
-group :jekyll_plugins do
-  gem 'jekyll-postfiles'
-  gem 'asciidoctor-diagram'
-  gem 'asciidoctor-diagram-plantuml'
-  gem "jekyll-asciidoc"
-  #gem "jekyll-remote-theme"
-  #gem 'jekyll-typogrify'
-  gem 'jekyll-analytics' # included in minima
-  gem "jekyll-feed" # included in minima
-  gem 'jekyll-seo-tag' # included in minima
-  #gem "jekyll-archives"
-end
+#group :jekyll_plugins do
+    gem 'jekyll-paginate-v2'
+    gem 'jekyll-postfiles'
+    gem 'asciidoctor-diagram'
+    gem 'asciidoctor-diagram-plantuml'
+    gem "jekyll-asciidoc"
+    #gem "jekyll-remote-theme"
+    #gem 'jekyll-typogrify'
+    gem 'jekyll-analytics' # included in minima
+    gem "jekyll-feed" # included in minima
+    gem 'jekyll-seo-tag' # included in minima
+    #gem "jekyll-archives"
+#end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
 # and associated library.
 platforms :mingw, :x64_mingw, :mswin, :jruby do
-  gem "tzinfo"
-  gem "tzinfo-data"
+    gem "tzinfo"
+    gem "tzinfo-data"
 end
 
 # Performance-booster for watching directories on Windows
