--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -103,7 +103,7 @@ jobs:
           dockerfile: ${{ matrix.directory }}/${{ matrix.dockerfile && format('{0}.', matrix.dockerfile) }}Dockerfile
           pushImage: ${{ github.event_name != 'pull_request' }}
           multiPlatform: true
-          platform: linux/amd64,linux/arm64,linux/arm/v7
+          platform: linux/amd64,linux/arm64
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
