--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -111,7 +111,7 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          #labels: ${{ steps.meta.outputs.labels }}
 
 
   windows:
